index.html: изменение alt в intro__bcimg; Добавлены страницы: галерея и форма отправки отзыва

--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,9 @@
           <h2 class="visually-hidden">
             Приветствие
           </h2>
-          <div class="intro__background"></div>
+          <div class="intro__background">
+            <img src="https://via.placeholder.com/150x150" alt="Welcome to SEDONA" class="intro__background-img">
+          </div>
         </header>
         <p class="intro__text">
           СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего! Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
@@ -122,6 +124,8 @@
         <!-- /.advantages__list -->
       </section>
       <!-- /.advantages -->
+
+      <!-- Ссылка ПОИСК ГОСТИНИЦ + карта -->
 
       <footer class="page-footer">
         <b class="page-footer__hashtag">#visitSEDONA</b>
