photo.html: Заменил div на img в .photo-card

--- a/source/photo.html
+++ b/source/photo.html
@@ -53,7 +53,7 @@
 
       <ul class="gallery__list">
         <li class="gallery__item photo-card">
-          <div class="photo-card__img"></div>
+          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
             <h3 class="card-info__title">Неродные просторы</h3>
             <p class="card-info__author">Автор фото: Борис</p>
@@ -64,7 +64,7 @@
           </div>
         </li>
         <li class="gallery__item photo-card">
-          <div class="photo-card__img"></div>
+          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
             <h3 class="card-info__title">Местная растительность</h3>
             <p class="card-info__author">Автор фото: Сергей</p>
@@ -75,7 +75,7 @@
           </div>
         </li>
         <li class="gallery__item photo-card">
-          <div class="photo-card__img"></div>
+          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
             <h3 class="card-info__title">Дорога на север</h3>
             <p class="card-info__author">Автор фото: Петр</p>
@@ -86,7 +86,7 @@
           </div>
         </li>
         <li class="gallery__item photo-card">
-          <div class="photo-card__img"></div>
+          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
             <h3 class="card-info__title">Мост дьявола</h3>
             <p class="card-info__author">Автор фото: Антон</p>
