Изменение классов блока с фоном на странице галереи и формы отзыва

--- a/source/form.html
+++ b/source/form.html
@@ -40,8 +40,8 @@
     <h1 class="visually-hidden">
       Форма отзыва
     </h1>
-    <div class="review-intro">
-      <img src="https://via.placeholder.com/150x150" alt="SEDONA" class="intro__img">
+    <div class="review-intro page-intro">
+      <img src="https://via.placeholder.com/150x150" alt="SEDONA" class="page-intro__img">
     </div>
 
     <footer class="page-footer">
