--- a/source/photo.html
+++ b/source/photo.html
@@ -40,10 +40,9 @@
     <h1 class="visually-hidden">
       Галерея
     </h1>
-    <div class="gallery-intro">
-      <img src="https://via.placeholder.com/150x150" alt="SEDONA" class="intro__img">
+    <div class="gallery-intro page-intro">
+      <img src="https://via.placeholder.com/150x150" alt="SEDONA" class="page-intro__img">
     </div>
-    <!-- ! можно ли расположить "block-name" перед "block" по БЭМ? -->
 
     <section class="gallery">
       <header class="gallery__header">
