--- a/source/photo.html
+++ b/source/photo.html
@@ -44,14 +44,14 @@
       <img src="https://via.placeholder.com/150x150" alt="SEDONA" class="page-intro__img">
     </div>
 
-    <section class="gallery">
-      <header class="gallery__header">
-        <h2 class="gallery__title">Фото и видео</h2>
-        <p class="gallery__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+    <section class="photo">
+      <header class="photo__header">
+        <h2 class="photo__title">Фото и видео</h2>
+        <p class="photo__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </header>
 
-      <ul class="gallery__list">
-        <li class="gallery__item photo-card">
+      <ul class="photo__list">
+        <li class="photo__item photo-card">
           <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
             <h3 class="card-info__title">Неродные просторы</h3>
@@ -62,7 +62,7 @@
             <div class="likes__counter">1350</div>
           </div>
         </li>
-        <li class="gallery__item photo-card">
+        <li class="photo__item photo-card">
           <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
             <h3 class="card-info__title">Местная растительность</h3>
@@ -73,7 +73,7 @@
             <div class="likes__counter">143</div>
           </div>
         </li>
-        <li class="gallery__item photo-card">
+        <li class="photo__item photo-card">
           <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
             <h3 class="card-info__title">Дорога на север</h3>
@@ -84,7 +84,7 @@
             <div class="likes__counter">96</div>
           </div>
         </li>
-        <li class="gallery__item photo-card">
+        <li class="photo__item photo-card">
           <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
             <h3 class="card-info__title">Мост дьявола</h3>
@@ -96,12 +96,11 @@
           </div>
         </li>
       </ul>
-      <!-- /.gallery__list -->
-
-      <!-- Блок с видео -->
-
+      <!-- /.photo__list -->
     </section>
-    <!-- /.gallery -->
+    <!-- /.photo -->
+
+    <!-- Секция с видео -->
 
     <footer class="page-footer">
       <b class="page-footer__hashtag">#visitSEDONA</b>
