photo.html: вернул секции класс .gallery; обернул список фотографий в div

--- a/source/photo.html
+++ b/source/photo.html
@@ -44,63 +44,69 @@
       <img src="https://via.placeholder.com/150x150" alt="SEDONA" class="page-intro__img">
     </div>
 
-    <section class="photo">
-      <header class="photo__header">
-        <h2 class="photo__title">Фото и видео</h2>
-        <p class="photo__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+    <section class="gallery">
+      <header class="gallery__header">
+        <h2 class="gallery__title">Фото и видео</h2>
+        <p class="gallery__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </header>
 
-      <ul class="photo__list">
-        <li class="photo__item photo-card">
-          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
-          <div class="photo-card__info card-info">
-            <h3 class="card-info__title">Неродные просторы</h3>
-            <p class="card-info__author">Автор фото: Борис</p>
-          </div>
-          <div class="photo-card__likes likes">
-            <div class="likes__icon"></div>
-            <div class="likes__counter">1350</div>
-          </div>
-        </li>
-        <li class="photo__item photo-card">
-          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
-          <div class="photo-card__info card-info">
-            <h3 class="card-info__title">Местная растительность</h3>
-            <p class="card-info__author">Автор фото: Сергей</p>
-          </div>
-          <div class="photo-card__likes likes">
-            <div class="likes__icon"></div>
-            <div class="likes__counter">143</div>
-          </div>
-        </li>
-        <li class="photo__item photo-card">
-          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
-          <div class="photo-card__info card-info">
-            <h3 class="card-info__title">Дорога на север</h3>
-            <p class="card-info__author">Автор фото: Петр</p>
-          </div>
-          <div class="photo-card__likes likes">
-            <div class="likes__icon"></div>
-            <div class="likes__counter">96</div>
-          </div>
-        </li>
-        <li class="photo__item photo-card">
-          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
-          <div class="photo-card__info card-info">
-            <h3 class="card-info__title">Мост дьявола</h3>
-            <p class="card-info__author">Автор фото: Антон</p>
-          </div>
-          <div class="photo-card__likes likes">
-            <div class="likes__icon"></div>
-            <div class="likes__counter">254</div>
-          </div>
-        </li>
-      </ul>
-      <!-- /.photo__list -->
-    </section>
-    <!-- /.photo -->
+      <div class="photo">
+        <ul class="photo__list">
+          <li class="photo__item photo-card">
+            <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
+            <div class="photo-card__info card-info">
+              <h3 class="card-info__title">Неродные просторы</h3>
+              <p class="card-info__author">Автор фото: Борис</p>
+            </div>
+            <div class="photo-card__likes likes">
+              <div class="likes__icon"></div>
+              <div class="likes__counter">1350</div>
+            </div>
+          </li>
+          <li class="photo__item photo-card">
+            <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
+            <div class="photo-card__info card-info">
+              <h3 class="card-info__title">Местная растительность</h3>
+              <p class="card-info__author">Автор фото: Сергей</p>
+            </div>
+            <div class="photo-card__likes likes">
+              <div class="likes__icon"></div>
+              <div class="likes__counter">143</div>
+            </div>
+          </li>
+          <li class="photo__item photo-card">
+            <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
+            <div class="photo-card__info card-info">
+              <h3 class="card-info__title">Дорога на север</h3>
+              <p class="card-info__author">Автор фото: Петр</p>
+            </div>
+            <div class="photo-card__likes likes">
+              <div class="likes__icon"></div>
+              <div class="likes__counter">96</div>
+            </div>
+          </li>
+          <li class="photo__item photo-card">
+            <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
+            <div class="photo-card__info card-info">
+              <h3 class="card-info__title">Мост дьявола</h3>
+              <p class="card-info__author">Автор фото: Антон</p>
+            </div>
+            <div class="photo-card__likes likes">
+              <div class="likes__icon"></div>
+              <div class="likes__counter">254</div>
+            </div>
+          </li>
+        </ul>
+        <!-- /.photo__list -->
+      </div>
+      <!-- /.photo -->
 
-    <!-- Секция с видео -->
+      <div class="video">
+        
+      </div>
+
+    </section>
+    <!-- /.gallery -->
 
     <footer class="page-footer">
       <b class="page-footer__hashtag">#visitSEDONA</b>
