photo.html: добавил блок с видео

--- a/source/photo.html
+++ b/source/photo.html
@@ -102,9 +102,13 @@
       <!-- /.photo -->
 
       <div class="video">
-        
+        <div class="video__header">
+          <h2 class="video__title">Все еще сомневаетесь?</h2>
+          <p class="video__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+        </div>
+        <div class="video__content"></div>
       </div>
-
+      <!-- /.video -->
     </section>
     <!-- /.gallery -->
 
