index.html: добавил секции бронирования и карты

--- a/source/index.html
+++ b/source/index.html
@@ -125,7 +125,21 @@
       </section>
       <!-- /.advantages -->
 
-      <!-- Ссылка ПОИСК ГОСТИНИЦ + карта -->
+      <section class="booking">
+        <div class="booking__header">
+          <h2 class="booking__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+          <p class="booking__text">Укажите предполагаемые датыпоездки, и мы покажем вам лучшиепредложения гостиниц в седоне</p>
+        </div>
+        <button class="button button-booking"></button>
+      </section>
+      <!-- /.booking -->
+
+      <section class="map">
+        <div class="map__content">
+          <div class="map__icon"></div>
+        </div>
+      </section>
+      <!-- /.map -->
 
       <footer class="page-footer">
         <b class="page-footer__hashtag">#visitSEDONA</b>
