form.html: добавил placeholder'ы для текстовых полей

--- a/source/form.html
+++ b/source/form.html
@@ -81,14 +81,14 @@
             <div class="form-group__item form--column">
               <label for="tel" class="label label--text">Контактный телефон*:</label>
               <div class="form-group__fields field-tel">
-                <input type="tel" class="field field--text" name="tel" id="tel" value="Введите телефон" required>
+                <input type="tel" class="field field--text" name="tel" id="tel" placeholder="Введите телефон" required>
                 <div class="field-tel__icon"></div>
               </div>
             </div>
             <div class="form-group__item form--column">
               <label for="email" class="label label--text">Электронная почта*:</label>
               <div class="form-group__fields field-email">
-                <input type="email" class="field field--text" name="email" id="email" value="Введите e-mail" required>
+                <input type="email" class="field field--text" name="email" id="email" placeholder="Введите e-mail" required>
                 <div class="field-email__icon"></div>
               </div>
           </div>
@@ -131,7 +131,7 @@
           <!-- /.form-group -->
           <div class="review-form__group form-group">
             <h2 class="form-group__title">Опишите свои эмоции:</h2>
-            <textarea class="field field--area" name="comment" id="comment" cols="" rows="">Опишите подробно все свои восторги</textarea>
+            <textarea class="field field--area" name="comment" id="comment" cols="" rows="" placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
           <!-- /.form-group -->
 
