--- a/source/form.html
+++ b/source/form.html
@@ -56,19 +56,19 @@
         <form action="https://echo.htmlacademy.ru" method="POST" class="review-form">
           <div class="review-form__group form-group">
             <h2 class="form-group__title">Представьтесь:</h2>
-            <div class="form-group__item form--row">
+            <div class="form-group__item">
               <label for="firstname" class="label label--text">ИМЯ*:</label>
               <div class="form-group__fields">
                 <input type="text" class="field field--text" name="firstname" id="firstname" value="Петр" required>
               </div>
             </div>
-            <div class="form-group__item form--row">
+            <div class="form-group__item">
               <label for="lastname" class="label label--text">ФАМИЛИЯ*:</label>
               <div class="form-group__fields">
                 <input type="text" class="field field--text" name="lastname" id="lastname" value="Иванов" required>
               </div>
             </div>
-            <div class="form-group__item form--row">
+            <div class="form-group__item">
               <label for="middlename" class="label label--text">ОТЧЕСТВО:</label>
               <div class="form-group__fields">
                 <input type="text" class="field field--text" name="middlename" id="middlename" value="Александрович" required>
@@ -78,53 +78,53 @@
           <!-- /.form-group -->
           <div class="review-form__group form-group">
             <h2 class="form-group__title">Контактная информация:</h2>
-            <div class="form-group__item form--column">
+            <div class="form-group__item">
               <label for="tel" class="label label--text">Контактный телефон*:</label>
-              <div class="form-group__fields field-tel">
+              <div class="form-group__fields">
                 <input type="tel" class="field field--text" name="tel" id="tel" placeholder="Введите телефон" required>
-                <div class="field-tel__icon"></div>
+                <div class="field-icon field-icon--tel"></div>
               </div>
             </div>
-            <div class="form-group__item form--column">
+            <div class="form-group__item">
               <label for="email" class="label label--text">Электронная почта*:</label>
-              <div class="form-group__fields field-email">
+              <div class="form-group__fields">
                 <input type="email" class="field field--text" name="email" id="email" placeholder="Введите e-mail" required>
-                <div class="field-email__icon"></div>
+                <div class="field-icon field-icon--email"></div>
               </div>
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group">
             <h2 class="form-group__title">Ваше Общее впечатление:</h2>
-            <div class="form-group__item form--row">
-              <input type="radio" class="radio--hidden" name="impression" id="positive" value="positive" checked>
+            <div class="form-group__item">
+              <input type="radio" class="hidden" name="impression" id="positive" value="positive" checked>
               <label for="positive" class="label label--selection">Скорее положительное</label>
             </div>
-            <div class="form-group__item form--row">
-              <input type="radio" class="radio--hidden" name="impression" id="negative" value="negative">
+            <div class="form-group__item">
+              <input type="radio" class="hidden" name="impression" id="negative" value="negative">
               <label for="negative" class="label label--selection">Скорее отрицательное</label>
             </div>
-            <div class="form-group__item form--row">
-              <input type="radio" class="radio--hidden" name="impression" id="neutral" value="neutral">
+            <div class="form-group__item">
+              <input type="radio" class="hidden" name="impression" id="neutral" value="neutral">
               <label for="neutral" class="label label--selection">Затрудняюсь ответить</label>
             </div>
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group">
             <h2 class="form-group__title">Посещенные достопримечательности:</h2>
-            <div class="form-group__item form--row">
-              <input type="checkbox" class="checkbox--hidden" name="bridge" id="bridge" checked>
+            <div class="form-group__item">
+              <input type="checkbox" class="hidden" name="bridge" id="bridge" checked>
               <label for="bridge" class="label label--selection">Мост Дьявола</label>
             </div>
-            <div class="form-group__item form--row">
-              <input type="checkbox" class="checkbox--hidden" name="mountain" id="mountain" checked>
+            <div class="form-group__item">
+              <input type="checkbox" class="hidden" name="mountain" id="mountain" checked>
               <label for="mountain" class="label label--selection">Гора-Колокол</label>
             </div>
-            <div class="form-group__item form--row">
-              <input type="checkbox" class="checkbox--hidden" name="park" id="park" checked>
+            <div class="form-group__item">
+              <input type="checkbox" class="hidden" name="park" id="park" checked>
               <label for="park" class="label label--selection">Слайд-парк</label>
             </div>
-            <div class="form-group__item form--row">
-              <input type="checkbox" class="checkbox--hidden" name="rocks" id="rocks">
+            <div class="form-group__item">
+              <input type="checkbox" class="hidden" name="rocks" id="rocks">
               <label for="rocks" class="label label--selection">Красные скалы</label>
             </div>
           </div>
@@ -134,9 +134,6 @@
             <textarea class="field field--area" name="comment" id="comment" cols="" rows="" placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
           <!-- /.form-group -->
-
-        <!-- ? заверстал блоки частей формы на div, будет ли правильнее использовать ul? или без разницы?  -->
-
           <button class="button button--submit">ОТПРАВИТЬ ОТЗЫВ</button>
         </form>
         <!-- /.review-form -->
