--- a/source/index.html
+++ b/source/index.html
@@ -130,7 +130,7 @@
           <h2 class="booking__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
           <p class="booking__text">Укажите предполагаемые датыпоездки, и мы покажем вам лучшиепредложения гостиниц в седоне</p>
         </div>
-        <button class="button button-booking"></button>
+        <button class="button button--booking"></button>
       </section>
       <!-- /.booking -->
 
