photo.html: изменил название класса фотогалереи

--- a/source/photo.html
+++ b/source/photo.html
@@ -50,9 +50,9 @@
         <p class="gallery__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </header>
 
-      <div class="photo">
-        <ul class="photo__list">
-          <li class="photo__item photo-card">
+      <div class="photo-gallery">
+        <ul class="photo-gallery__list">
+          <li class="photo-gallery__item photo-card">
             <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
             <div class="photo-card__info card-info">
               <h3 class="card-info__title">Неродные просторы</h3>
@@ -63,7 +63,7 @@
               <div class="likes__counter">1350</div>
             </div>
           </li>
-          <li class="photo__item photo-card">
+          <li class="photo-gallery__item photo-card">
             <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
             <div class="photo-card__info card-info">
               <h3 class="card-info__title">Местная растительность</h3>
@@ -74,7 +74,7 @@
               <div class="likes__counter">143</div>
             </div>
           </li>
-          <li class="photo__item photo-card">
+          <li class="photo-gallery__item photo-card">
             <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
             <div class="photo-card__info card-info">
               <h3 class="card-info__title">Дорога на север</h3>
@@ -85,7 +85,7 @@
               <div class="likes__counter">96</div>
             </div>
           </li>
-          <li class="photo__item photo-card">
+          <li class="photo-gallery__item photo-card">
             <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
             <div class="photo-card__info card-info">
               <h3 class="card-info__title">Мост дьявола</h3>
@@ -97,9 +97,9 @@
             </div>
           </li>
         </ul>
-        <!-- /.photo__list -->
+        <!-- /.photo-gallery__list -->
       </div>
-      <!-- /.photo -->
+      <!-- /.photo-gallery -->
 
       <div class="video">
         <div class="video__header">
