Создал файлы стилей для блоков; задал фоны, фоновые изображения, параметры текста

--- a/source/index.html
+++ b/source/index.html
@@ -20,10 +20,10 @@
               <a href="#">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Фото и видео</a>
+              <a href="photo.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Форма Отзыва</a>
+              <a href="form.html">Форма Отзыва</a>
             </li>
             <li class="site-list__item">
               <a href="#">HTML ACADEMY</a>
@@ -48,12 +48,17 @@
             Приветствие
           </h2>
           <div class="intro__background">
-            <img src="https://via.placeholder.com/150x150" alt="Welcome to SEDONA" class="intro__background-img">
+            <img src="img/text-sedona-index.svg" alt="Welcome to SEDONA" class="intro__background-img">
           </div>
         </header>
-        <p class="intro__text">
-          СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего! Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
-        </p>
+        <div class="intro__description">
+          <h3 class="intro__title">
+            СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!
+          </h3>
+          <p class="intro__text">
+            Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
+          </p>
+        </div>
       </section>
       <!-- /.intro -->
 
@@ -61,10 +66,10 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
           <li class="advantages__item advantage">
-            <div class="advantage__header">
-              <h3 class="advantage__title">НАСТОЯЩИЙ ГОРОДОК</h3>
-              <p class="advantage__number">— №1 —</p>
-              <p class="advantage__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+            <div class="advantage__header advantage__header--explicit">
+              <h3 class="advantage__title advantage__title--explicit">НАСТОЯЩИЙ ГОРОДОК</h3>
+              <p class="advantage__number advantage__number--explicit">— №1 —</p>
+              <p class="advantage__description advantage__description--explicit">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
             </div>
             <img class="advantage__img" src="https://via.placeholder.com/150x150" alt="Фото города">
             <div class="advantage__details detail">
@@ -93,29 +98,29 @@
             <!-- /.advantage__details -->
           </li>
           <li class="advantages__item advantage">
-            <div class="advantage-header">
-              <h3 class="advantage__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-              <p class="advantage__number">— №2 —</p>
-              <p class="advantage__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <div class="advantage__header advantage__header--explicit">
+              <h3 class="advantage__title advantage__title--explicit">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+              <p class="advantage__number advantage__number--explicit">— №2 —</p>
+              <p class="advantage__description advantage__description--explicit">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
             <img class="advantage__img" src="https://via.placeholder.com/150x150" alt="Фото города">
           </li>
           <li class="advantages__item advantage">
-            <div class="advantage-header">
+            <div class="advantage__header">
               <h3 class="advantage__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
               <p class="advantage__number">— №3 —</p>
               <p class="advantage__description">ВСЕ интересные места находятся очень близко</p>
             </div>
           </li>
           <li class="advantages__item advantage">
-            <div class="advantage-header">
+            <div class="advantage__header">
               <h3 class="advantage__title">КРАСИВАЯ ДОРОГА</h3>
               <p class="advantage__number">— №4 —</p>
               <p class="advantage__description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
             </div>
           </li>
           <li class="advantages__item advantage">
-            <div class="advantage-header">
+            <div class="advantage__header">
               <h3 class="advantage__title">МАЛО ТУРИСТОВ</h3>
               <p class="advantage__number">— №5 —</p>
               <p class="advantage__description">Большинство едет в гранд каньони толпится там</p>
