--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
   <header class="page-header">
@@ -16,10 +17,10 @@
         </button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a href="#">Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Фото и видео</a>
+            <a href="photo.html">Фото и видео</a>
           </li>
           <li class="site-list__item">
             <a href="#">Форма Отзыва</a>
@@ -41,7 +42,7 @@
       Форма отзыва
     </h1>
     <div class="review-intro page-intro">
-      <img src="https://via.placeholder.com/150x150" alt="SEDONA" class="page-intro__img">
+      <img src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
     </div>
 
     <section class="review">
