Добавил примеси для текстового содержимого, обновил стили; добавил стиль кнопок

--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a href="#" class="logo page-header__logo">
+      <a href="#" class="page-header__logo logo">
         <img width="102" height="84" src="https://via.placeholder.com/150x150" alt="Логотип">
       </a>
       <div class="main-nav__wrapper">
@@ -52,10 +52,10 @@
           </div>
         </header>
         <div class="intro__description">
-          <h3 class="intro__title">
+          <h3 class="intro__title text-title">
             СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!
           </h3>
-          <p class="intro__text">
+          <p class="intro__text text-description text-description--promo">
             Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
           </p>
         </div>
@@ -67,63 +67,63 @@
         <ul class="advantages__list">
           <li class="advantages__item advantage">
             <div class="advantage__header advantage__header--explicit">
-              <h3 class="advantage__title advantage__title--explicit">НАСТОЯЩИЙ ГОРОДОК</h3>
-              <p class="advantage__number advantage__number--explicit">— №1 —</p>
-              <p class="advantage__description advantage__description--explicit">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+              <h3 class="advantage__title advantage__title--explicit text-title">НАСТОЯЩИЙ ГОРОДОК</h3>
+              <p class="advantage__number advantage__number--explicit text-description">— №1 —</p>
+              <p class="advantage__description advantage__description--explicit text-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
             </div>
             <img class="advantage__img" src="https://via.placeholder.com/150x150" alt="Фото города">
             <div class="advantage__details detail">
               <div class="detail__item">
                 <div class="detail__header">
                   <div class="detail__icon"></div>
-                  <p class="detail__title">ЖИЛЬЕ</p>
+                  <p class="detail__title text-title">ЖИЛЬЕ</p>
                 </div>
-                <p class="detail__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                <p class="detail__description text-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </div>
               <div class="detail__item">
                 <div class="detail__header">
                   <div class="detail__icon"></div>
-                  <p class="detail__title">СУВЕНИРЫ</p>
+                  <p class="detail__title text-title">СУВЕНИРЫ</p>
                 </div>
-                <p class="detail__description">Не только китайского, но и местного производства!</p>
+                <p class="detail__description text-description">Не только китайского, но и местного производства!</p>
               </div>
               <div class="detail__item">
                 <div class="detail__header">
                   <div class="detail__icon"></div>
-                  <p class="detail__title">ЕДА</p>
+                  <p class="detail__title text-title">ЕДА</p>
                 </div>
-                <p class="detail__description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+                <p class="detail__description text-description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
               </div>
             </div>
             <!-- /.advantage__details -->
           </li>
           <li class="advantages__item advantage">
             <div class="advantage__header advantage__header--explicit">
-              <h3 class="advantage__title advantage__title--explicit">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-              <p class="advantage__number advantage__number--explicit">— №2 —</p>
-              <p class="advantage__description advantage__description--explicit">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <h3 class="advantage__title advantage__title--explicit text-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+              <p class="advantage__number advantage__number--explicit text-description">— №2 —</p>
+              <p class="advantage__description advantage__description--explicit text-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
             <img class="advantage__img" src="https://via.placeholder.com/150x150" alt="Фото города">
           </li>
           <li class="advantages__item advantage">
             <div class="advantage__header">
-              <h3 class="advantage__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
-              <p class="advantage__number">— №3 —</p>
-              <p class="advantage__description">ВСЕ интересные места находятся очень близко</p>
+              <h3 class="advantage__title text-title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+              <p class="advantage__number text-description">— №3 —</p>
+              <p class="advantage__description text-description">ВСЕ интересные места находятся очень близко</p>
             </div>
           </li>
           <li class="advantages__item advantage">
             <div class="advantage__header">
-              <h3 class="advantage__title">КРАСИВАЯ ДОРОГА</h3>
-              <p class="advantage__number">— №4 —</p>
-              <p class="advantage__description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+              <h3 class="advantage__title text-title">КРАСИВАЯ ДОРОГА</h3>
+              <p class="advantage__number text-description">— №4 —</p>
+              <p class="advantage__description text-description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
             </div>
           </li>
           <li class="advantages__item advantage">
             <div class="advantage__header">
-              <h3 class="advantage__title">МАЛО ТУРИСТОВ</h3>
-              <p class="advantage__number">— №5 —</p>
-              <p class="advantage__description">Большинство едет в гранд каньони толпится там</p>
+              <h3 class="advantage__title text-title">МАЛО ТУРИСТОВ</h3>
+              <p class="advantage__number text-description">— №5 —</p>
+              <p class="advantage__description text-description">Большинство едет в гранд каньони толпится там</p>
             </div>
           </li>
         </ul>
@@ -133,10 +133,10 @@
 
       <section class="booking">
         <div class="booking__header">
-          <h2 class="booking__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-          <p class="booking__text">Укажите предполагаемые датыпоездки, и мы покажем вам лучшиепредложения гостиниц в седоне</p>
+          <h2 class="booking__title text-title text-title--promo">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+          <p class="booking__text text-description text-description--sub">Укажите предполагаемые датыпоездки, и мы покажем вам лучшиепредложения гостиниц в седоне</p>
         </div>
-        <button class="button button--booking"></button>
+        <button class="button button--booking">НАЙТИ гостиницу</button>
       </section>
       <!-- /.booking -->
 
@@ -148,7 +148,7 @@
       <!-- /.map -->
 
       <footer class="page-footer">
-        <b class="page-footer__hashtag">#visitSEDONA</b>
+        <b class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</b>
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
@@ -164,7 +164,7 @@
         </div>
         <!-- /.social -->
         <div class="page-footer__copyright copyright">
-          <b class="copyright__text">Разработано</b>
+          <b class="copyright__text text-description text-description--promo">Разработано</b>
           <div class="copyright__icon"></div>
         </div>
         <!-- /.copyright -->
