--- a/source/form.html
+++ b/source/form.html
@@ -48,15 +48,15 @@
     <section class="review">
       <div class="review-wrapper">
         <div class="review__header">
-          <h2 class="review__header-title">Оставьте свой отзыв</h2>
-          <p class="review__header-text">
+          <h2 class="review__header-title text-title">Оставьте свой отзыв</h2>
+          <p class="review__header-text text-description text-description--sub">
             Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
           </p>
         </div>
         <!-- /.review__header -->
         <form action="https://echo.htmlacademy.ru" method="POST" class="review-form">
           <div class="review-form__group form-group">
-            <h2 class="form-group__title">Представьтесь:</h2>
+            <h2 class="form-group__title text-title">Представьтесь:</h2>
             <div class="form-group__item">
               <label for="firstname" class="label label--text">ИМЯ*:</label>
               <div class="form-group__fields">
@@ -78,7 +78,7 @@
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group">
-            <h2 class="form-group__title">Контактная информация:</h2>
+            <h2 class="form-group__title text-title">Контактная информация:</h2>
             <div class="form-group__item">
               <label for="tel" class="label label--text">Контактный телефон*:</label>
               <div class="form-group__fields">
@@ -95,7 +95,7 @@
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group">
-            <h2 class="form-group__title">Ваше Общее впечатление:</h2>
+            <h2 class="form-group__title text-title">Ваше Общее впечатление:</h2>
             <div class="form-group__item">
               <input type="radio" class="hidden" name="impression" id="positive" value="positive" checked>
               <label for="positive" class="label label--selection">Скорее положительное</label>
@@ -111,7 +111,7 @@
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group">
-            <h2 class="form-group__title">Посещенные достопримечательности:</h2>
+            <h2 class="form-group__title text-title">Посещенные достопримечательности:</h2>
             <div class="form-group__item">
               <input type="checkbox" class="hidden" name="bridge" id="bridge" checked>
               <label for="bridge" class="label label--selection">Мост Дьявола</label>
@@ -131,7 +131,7 @@
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group">
-            <h2 class="form-group__title">Опишите свои эмоции:</h2>
+            <h2 class="form-group__title text-title">Опишите свои эмоции:</h2>
             <textarea class="field field--area" name="comment" id="comment" cols="" rows="" placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
           <!-- /.form-group -->
@@ -144,7 +144,7 @@
     <!-- /.review -->
 
     <footer class="page-footer">
-      <b class="page-footer__hashtag">#visitSEDONA</b>
+      <b class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</b>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -160,7 +160,7 @@
       </div>
       <!-- /.social -->
       <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
+        <b class="copyright__text text-description text-description--promo">Разработано</b>
         <div class="copyright__icon"></div>
       </div>
       <!-- /.copyright -->
