--- a/source/photo.html
+++ b/source/photo.html
@@ -47,8 +47,8 @@
 
     <section class="gallery">
       <header class="gallery__header">
-        <h2 class="gallery__title">Фото и видео</h2>
-        <p class="gallery__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+        <h2 class="gallery__title text-title">Фото и видео</h2>
+        <p class="gallery__text text-description text-description--sub">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </header>
 
       <div class="photo-gallery">
@@ -104,8 +104,8 @@
 
       <div class="video">
         <div class="video__header">
-          <h2 class="video__title">Все еще сомневаетесь?</h2>
-          <p class="video__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+          <h2 class="video__title text-title">Все еще сомневаетесь?</h2>
+          <p class="video__text text-description text-description--sub">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
         <div class="video__content"></div>
       </div>
@@ -114,7 +114,7 @@
     <!-- /.gallery -->
 
     <footer class="page-footer">
-      <b class="page-footer__hashtag">#visitSEDONA</b>
+      <b class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</b>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -130,7 +130,7 @@
       </div>
       <!-- /.social -->
       <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
+        <b class="copyright__text text-description text-description--promo">Разработано</b>
         <div class="copyright__icon"></div>
       </div>
       <!-- /.copyright -->
