Изменил стили для текста в copyright

--- a/source/index.html
+++ b/source/index.html
@@ -164,7 +164,7 @@
         </div>
         <!-- /.social -->
         <div class="page-footer__copyright copyright">
-          <b class="copyright__text text-description text-description--promo">Разработано</b>
+          <b class="copyright__text text-copyright">Разработано</b>
           <div class="copyright__icon"></div>
         </div>
         <!-- /.copyright -->
