Добавил отступы крупным блокам; корректировки стилей текста, переменных для цвета и шрифта

--- a/source/index.html
+++ b/source/index.html
@@ -50,6 +50,7 @@
           <div class="intro__background">
             <img src="img/text-sedona-index.svg" alt="Welcome to SEDONA" class="intro__background-img">
           </div>
+          <div class="intro-decoration"></div>
         </header>
         <div class="intro__description">
           <h3 class="intro__title text-title">
@@ -64,6 +65,7 @@
 
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
+        <div class="advantages-decoration"></div>
         <ul class="advantages__list">
           <li class="advantages__item advantage">
             <div class="advantage__header advantage__header--explicit">
