--- a/source/form.html
+++ b/source/form.html
@@ -144,7 +144,7 @@
     <!-- /.review -->
 
     <footer class="page-footer">
-      <b class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</b>
+      <p class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</p>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
