--- a/source/index.html
+++ b/source/index.html
@@ -60,12 +60,12 @@
             Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
           </p>
         </div>
+        <div class="intro__decoration"></div>
       </section>
       <!-- /.intro -->
 
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-        <div class="advantages-decoration"></div>
         <ul class="advantages__list">
           <li class="advantages__item advantage">
             <div class="advantage__header advantage__header--explicit">
@@ -150,7 +150,7 @@
       <!-- /.map -->
 
       <footer class="page-footer">
-        <b class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</b>
+        <p class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</p>
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
