--- a/source/photo.html
+++ b/source/photo.html
@@ -114,7 +114,7 @@
     <!-- /.gallery -->
 
     <footer class="page-footer">
-      <b class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</b>
+      <p class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</p>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
