--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   <body class="page__body">
     <header class="page-header">
       <a href="#" class="page-header__logo logo">
-        <img width="102" height="84" src="https://via.placeholder.com/150x150" alt="Логотип">
+        <img width="102" height="84" src="img/logo-sedona-mobile.svg" alt="Логотип">
       </a>
       <div class="main-nav__wrapper">
         <nav class="main-nav visually-hidden">
@@ -17,16 +17,16 @@
           </button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a href="#">Главная</a>
+              <a class="site-list__link" href="#">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="photo.html">Фото и видео</a>
+              <a class="site-list__link" href="photo.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html">Форма Отзыва</a>
+              <a class="site-list__link" href="form.html">Форма Отзыва</a>
             </li>
             <li class="site-list__item">
-              <a href="#">HTML ACADEMY</a>
+              <a class="site-list__link" href="#">HTML ACADEMY</a>
             </li>
           </ul>
           <!-- /.site-list -->
