Создал файлы блоков страницы с галереей, обновил их стили; изменил переменные размеров экранов

--- a/source/form.html
+++ b/source/form.html
@@ -17,16 +17,16 @@
         </button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a href="index.html">Главная</a>
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="photo.html">Фото и видео</a>
+            <a class="site-list__link" href="photo.html">Фото и видео</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Форма Отзыва</a>
+            <a class="site-list__link" href="#">Форма Отзыва</a>
           </li>
           <li class="site-list__item">
-            <a href="#">HTML ACADEMY</a>
+            <a class="site-list__link" href="#">HTML ACADEMY</a>
           </li>
         </ul>
         <!-- /.site-list -->
