--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,7 @@
           <div class="intro__background">
             <img src="img/text-sedona-index.svg" alt="Welcome to SEDONA" class="intro__background-img">
           </div>
-          <div class="intro-decoration"></div>
+          <div class="intro__decoration"></div>
         </header>
         <div class="intro__description">
           <h3 class="intro__title text-title">
@@ -59,8 +59,8 @@
           <p class="intro__text text-description text-description--promo">
             Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
           </p>
+          <div class="intro__description-decor"></div>
         </div>
-        <div class="intro__decoration"></div>
       </section>
       <!-- /.intro -->
 
