Разделил стили текстовых блоков на отдельные файлы; добавил отступы для блоков booking, map, review, review-form, video

--- a/source/photo.html
+++ b/source/photo.html
@@ -107,14 +107,18 @@
           <h2 class="video__title text-title">Все еще сомневаетесь?</h2>
           <p class="video__text text-description text-description--sub">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
-        <div class="video__content"></div>
+        <div class="video__content">
+          <img src="img/video-mobile@1x.jpg" alt="Видео" class="video__picture">
+          <div class="video__player-interface">
+          </div>
+        </div>
       </div>
       <!-- /.video -->
     </section>
     <!-- /.gallery -->
 
     <footer class="page-footer">
-      <p class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</p>
+      <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -130,7 +134,7 @@
       </div>
       <!-- /.social -->
       <div class="page-footer__copyright copyright">
-        <b class="copyright__text text-copyright">Разработано</b>
+        <span class="copyright__text text-copyright">Разработано</span>
         <div class="copyright__icon"></div>
       </div>
       <!-- /.copyright -->
