--- a/source/form.html
+++ b/source/form.html
@@ -92,6 +92,7 @@
                 <input type="email" class="field field--text" name="email" id="email" placeholder="Введите e-mail" required>
                 <div class="field-icon field-icon--email"></div>
               </div>
+            </div>
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group">
@@ -144,7 +145,7 @@
     <!-- /.review -->
 
     <footer class="page-footer">
-      <p class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</p>
+      <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -160,7 +161,7 @@
       </div>
       <!-- /.social -->
       <div class="page-footer__copyright copyright">
-        <b class="copyright__text text-copyright">Разработано</b>
+        <span class="copyright__text text-copyright">Разработано</span>
         <div class="copyright__icon"></div>
       </div>
       <!-- /.copyright -->
