--- a/source/index.html
+++ b/source/index.html
@@ -144,13 +144,13 @@
 
       <section class="map">
         <div class="map__content">
-          <div class="map__icon"></div>
+          <img src="img/bg-map-mobile@1x.jpg" alt="Карта" class="map__img">
         </div>
       </section>
       <!-- /.map -->
 
       <footer class="page-footer">
-        <p class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</p>
+        <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
@@ -166,7 +166,7 @@
         </div>
         <!-- /.social -->
         <div class="page-footer__copyright copyright">
-          <b class="copyright__text text-copyright">Разработано</b>
+          <span class="copyright__text text-copyright">Разработано</span>
           <div class="copyright__icon"></div>
         </div>
         <!-- /.copyright -->
